--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "apollo-boost": "^0.3.1",
     "apollo-client": "^2.5.1",
+    "apollo-link-context": "^1.0.17",
+    "apollo-link-ws": "^1.0.17",
     "apollo-test-utils": "^0.3.2",
     "graphql": "^14.2.1",
     "graphql-tag": "^2.10.1",
@@ -12,7 +14,10 @@
     "react": "^16.8.6",
     "react-apollo": "^2.5.5",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.0"
+    "react-router": "^5.0.0",
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "3.0.0",
+    "subscriptions-transport-ws": "^0.9.16"
   },
   "scripts": {
     "start": "react-scripts start",
